// ERD untuk tabel yang digunakan oleh flow system aktif.
// Tabel bawaan Laravel, worker (legacy), dan password_history tidak disertakan.

Table users {
  id int [pk, increment]
  fullname varchar(255)
  username varchar(255)
  handphone varchar(255)
  jk varchar(255)
  asal varchar(255)
  email varchar(255)
  password varchar(255)
  role varchar(255) [note: 'Admin atau Worker; worker system disimpan di tabel ini']
  img varchar(255)
  hex varchar(255)
  remember_token varchar(100)
  created_at datetime
  updated_at datetime
  deleted_at timestamp
}

Table user_preferences {
  id bigint [pk, increment]
  user_id int [not null, unique]
  layout preference_layout [not null, default: 'light']
  sidebar_color sidebar_theme [not null, default: 'dark']
  theme_color varchar(20) [not null, default: 'blue']
  mini_sidebar boolean [not null, default: false]
  sticky_header boolean [not null, default: true]
  created_at timestamp
  updated_at timestamp
}

Table client {
  id int [pk, increment]
  customer varchar(255)
  handphone varchar(255)
  jk varchar(255)
  asal varchar(255)
  user_id int [note: 'User yang membuat/mengelola data client']
  created_at datetime
  updated_at datetime
  deleted_at timestamp
}

Table task {
  id int [pk, increment]
  client_id int [note: 'Client pemesan']
  worker_id int [note: 'Mengarah ke users.id dengan role = Worker']
  kode_task varchar(255) [note: 'Kode bisnis task, contoh TS20260919001']
  task text
  order date
  deadline date
  price_order bigint
  pay_worker bigint
  margin bigint
  task_status varchar(255)
  pay_status varchar(255)
  user_id int [note: 'Kolom tersedia sebagai user pembuat, tetapi saat ini tidak diisi pada flow add task']
  created_at datetime
  updated_at datetime
  deleted_at timestamp

  Indexes {
    client_id
    worker_id
    kode_task
    order
    deadline
    task_status
    pay_status
  }
}

Table task_detail {
  id int [pk, increment]
  kode_task varchar(255) [note: 'Relasi logis ke task.kode_task; belum menjadi foreign key di migration']
  deskripsi text
  file varchar(255)
  user_id int [note: 'User yang mengunggah/mengelola detail task']
  created_at datetime
  updated_at datetime
  deleted_at timestamp
}

Ref: users.id - user_preferences.user_id
Ref: users.id < client.user_id
Ref: users.id < task.worker_id
Ref: users.id < task.user_id
Ref: users.id < task_detail.user_id
Ref: client.id < task.client_id
Ref: task.kode_task < task_detail.kode_task

Enum preference_layout {
  light
  dark
}

Enum sidebar_theme {
  light
  dark
}
